--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/main.min.css">
-    
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -291,7 +291,25 @@
 
     <footer class="footer" id="footer">
         <div class="container footer__wrapper">
-            <a href="/" class="footer__brand">Power Ukraine</a>
+            <div class="footer__content">
+                <div class="footer__content__general">
+                    <a href="/" class="footer__brand">Power Ukraine</a>
+                    <p class="footer__copy">Copyright © Power Ukraine All rights reserved</p>
+                </div>
+                <ul class="footer__socials">
+                    <li>
+                        <a href="/"></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__form">
+                <h3 class="footer__form__title">Sign up for updates</h3>
+                <form action="" class="footer__form-content">
+                    <input class="input" type="text" placeholder="Enter your Name">
+                    <input class="input" type="email" placeholder="Enter your Email">
+                    <input class="btn btn__primary" type="submit" value="Sign Up">
+                </form>
+            </div>
         </div>
     </footer>
 
