--- a/energy.html
+++ b/energy.html
@@ -4,13 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Power Ukraine</title>
     <link rel="stylesheet" href="css/main.min.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Upgrade Ukraine">
+    <meta name="description" content="Upgrade Ukraine is an international hub that connects diverse stakeholders participating and investing in Ukraine's recovery">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://upgradeukraine.org/">
+    <meta property="og:title" content="Upgrade Ukraine">
+    <meta property="og:description" content="Upgrade Ukraine is an international hub that connects diverse stakeholders participating and investing in Ukraine's recovery">
+    <meta property="og:image" content="https://res2.weblium.site/res/6363c545869c68000dc0d08e/637cdb96381f86000d901c8b_optimized">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://upgradeukraine.org/">
+    <meta property="twitter:title" content="Upgrade Ukraine">
+    <meta property="twitter:description" content="Upgrade Ukraine is an international hub that connects diverse stakeholders participating and investing in Ukraine's recovery">
+    <meta property="twitter:image" content="https://res2.weblium.site/res/6363c545869c68000dc0d08e/637cdb96381f86000d901c8b_optimized">
 </head>
 <body>
 
