--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Power Ukraine</title>
+    <title>Upgrade Ukraine</title>
     <link rel="stylesheet" href="css/main.min.css">
 
     <!-- Fonts -->
@@ -37,7 +37,7 @@
         <nav class="navbar">
             <div class="container navbar__wrapper">
                 <div class="navbar__general">
-                    <a href="" class="navbar__brand">Power Ukraine</a>
+                    <a href="" class="navbar__brand">Upgrade Ukraine</a>
     
                     <button class="navbar-toggle">
                         <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -122,7 +122,9 @@
                         <span class="card-phases__date">March 2023</span>
 
                         <div class="card-phases__content">
-                            <h3 class="card-phases__title">2 - Energy conference</h3>
+                            <a href="/power-ukraine.html">
+                                <h3 class="card-phases__title">2 - power Ukraine conference</h3>
+                            </a>
                             <p class="card-phases__description">HOW TO LEAPFROG what is the future of UKRAINIAN ENERGY SECTOR?</p>
                         </div>
                     </article>
@@ -231,7 +233,7 @@
 
                 <ul class="more-links__articles">
                     <li class="more-links__article">
-                        <a class="more-links__article__item" href="/">1 - Upgrade Ukraine Energy conference</a>
+                        <a class="more-links__article__item" href="/power-ukraine.html">1 - Power Ukraine Energy conference</a>
                     </li>
                     <li class="more-links__article">
                         <a class="more-links__article__item" href="/">2 - Competition to support best projects</a>
