--- a/power-ukraine.html
+++ b/power-ukraine.html
@@ -64,7 +64,8 @@
 
         <section class="header-gif" id="header-gif">
             <div class="container-fluid">
-                <img class="header-gif__img" src="https://media1.giphy.com/media/q217GUnfKAmJlFcjBX/giphy.gif" alt="">
+                <!-- <img class="header-gif__img" src="https://media1.giphy.com/media/q217GUnfKAmJlFcjBX/giphy.gif" alt=""> -->
+                <video class="header-gif__img" src="./videos/PU.mp4" autoplay loop muted></video>
             </div>
         </section>
     </header>
@@ -157,16 +158,22 @@
                         <a class="more-links__article__item" href="/">Business meetings in Berlin</a>
                     </li>
                     <li class="more-links__article">
-                        <a class="more-links__article__item" href="/">Business meetings in Berlin</a>
+                        <a class="more-links__article__item" href="/">Coliving Duseldorf</a>
                     </li>
                     <li class="more-links__article">
-                        <a class="more-links__article__item" href="/">Business meetings in Berlin</a>
+                        <a class="more-links__article__item" href="/">Podcast</a>
                     </li>
                     <li class="more-links__article">
-                        <a class="more-links__article__item" href="/">Business meetings in Berlin</a>
+                        <a class="more-links__article__item" href="/">Champing</a>
                     </li>
                     <li class="more-links__article">
-                        <a class="more-links__article__item" href="/">Business meetings in Berlin</a>
+                        <a class="more-links__article__item" href="/">Decentralised Energy supply in Ukraine Xprize</a>
+                    </li>
+                    <li class="more-links__article">
+                        <a class="more-links__article__item" href="/">Colivings</a>
+                    </li>
+                    <li class="more-links__article">
+                        <a class="more-links__article__item" href="/">Directions</a>
                     </li>
                 </ul>
             </div>
