--- a/power-ukraine.html
+++ b/power-ukraine.html
@@ -293,16 +293,19 @@
                         <div class="swiper-wrapper">
 
                             <div class="swiper-slide">
-                                <img class="partners-client" src="img/Client/Google.svg" alt="">
+                                <a href="https://www.gls.de/privatkunden/">
+                                    <img class="partners-client" src="img/Client/glsbank.svg" alt="">
+                                </a>
                             </div>
                             <div class="swiper-slide">
-                                <img class="partners-client" src="img/Client/Stripe.svg" alt="">
+                                <a href="https://cocreation-foundation.org/">
+                                    <img class="partners-client" src="img/Client/Cf.svg" alt="">
+                                </a>
                             </div>
                             <div class="swiper-slide">
-                                <img class="partners-client" src="img/Client/Uber.svg" alt="">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="partners-client" src="img/Client/microsoft.svg" alt="">
+                                <a href="https://www.startupboat.org/">
+                                    <img class="partners-client" src="img/Client/Startupboat.svg" alt="">
+                                </a>
                             </div>
 
                         </div>
