--- a/power-ukraine.html
+++ b/power-ukraine.html
@@ -72,7 +72,7 @@
         <section class="header-gif" id="header-gif">
             <div class="container-fluid">
                 <!-- <img class="header-gif__img" src="https://media1.giphy.com/media/q217GUnfKAmJlFcjBX/giphy.gif" alt=""> -->
-                <video class="header-gif__img" src="./videos/PU.mp4" autoplay loop muted></video>
+                <video class="header-gif__img" src="./videos/PU2.mp4" autoplay loop muted></video>
             </div>
         </section>
     </header>
@@ -91,7 +91,8 @@
     
                 <article class="video-card-teaser">
                     <div class="video-card-teaser__video">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Ojn968IxcHA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <img src="./img/power-dest1.jpg" alt="">
+                        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/Ojn968IxcHA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                     </div>
                     <!-- <video class="video-card-teaser__video" src="https://www.youtube.com/watch?v=NvZMy6xaYcQ&ab_channel=MagicMusic"></video> -->
                     <div class="video-card-teaser__body">
@@ -112,7 +113,8 @@
 
                 <article class="video-card-teaser">
                     <div class="video-card-teaser__video">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Ojn968IxcHA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <img src="./img/power-dest2.jpg" alt="">
+                        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/Ojn968IxcHA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                     </div>
                     <!-- <video class="video-card-teaser__video" src="https://www.youtube.com/watch?v=NvZMy6xaYcQ&ab_channel=MagicMusic"></video> -->
                     <div class="video-card-teaser__body">
@@ -133,7 +135,8 @@
 
                 <article class="video-card-teaser">
                     <div class="video-card-teaser__video">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Ojn968IxcHA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <img src="./img/power-dest3.jpg" alt="">
+                        <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/Ojn968IxcHA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
                     </div>
                     <!-- <video class="video-card-teaser__video" src="https://www.youtube.com/watch?v=NvZMy6xaYcQ&ab_channel=MagicMusic"></video> -->
                     <div class="video-card-teaser__body">
