--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Upgrade Ukraine</title>
     <link rel="stylesheet" href="css/main.min.css">
 
+    <!-- Favicons -->
+    <link rel="icon" type="image/x-icon" href="/img/Favicons/Favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/img/Favicons/Favicon.png">
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -197,9 +201,11 @@
 
         <section class="milestones spacer">
             <div class="container milestones__wrapper">
-                <div class="milestones__wrapper-img">
+                <!-- <div class="milestones__wrapper-img">
                     <img class="milestones__wrapper-img__img" src="./img/MilestonesImg.jpg" alt="">
-                </div>
+                </div> -->
+                <video src="./videos/Meet.MOV" class="milestones__media" controls>
+                </video>
                 <div class="milestones__content">
                     <h2>Milestones</h2>
                     <h3>The conference Upgrade Ukraine</h3>
